Adding support for moving messages to another folder/label

--- a/config.yml.example
+++ b/config.yml.example
@@ -5,6 +5,7 @@
     ssl: yes
     username: user@domain.tld
     password: secret
+    move_folder: processed
   smtp:
     server: smtp.gmail.com
     port: 465
